# data-struct-c-c-

Tree/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  rank  rank.cpp  rank2  rank2.cpp
Tree/bts/: bts  (+5 more)
arrays/: Array  Array.cpp  ArrayC  ArrayC.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
basicC/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pass_struct_to_class  pass_struct_to_class.cpp  passing  passing.cpp  passing_array  passing_array.cpp  passing_struct  passing_struct.cpp  passing_struct2  passing_struct2.cpp  reference  reference.cpp  struct_pointer  struct_pointer.cpp
linked_list/: CMakeCache.txt  CMakeLists.txt  Circular_List  Circular_List.cpp  Double_List  Double_List.cpp  List  List.cpp  Makefile  Polinomial  Polinomial.cpp  SparceMatrix  SparceMatrix.cpp  cmake_install.cmake  first  first.cpp
matrix/: CMakeCache.txt  CMakeLists.txt  Makefile  Symmetric  Symmetric.cpp  cmake_install.cmake  diagonal  diagonal.cpp  matrix  toeplitz  toeplitz.cpp  triangularHigh  triangularHigh.cpp  triangularLow  triangularLow.cpp  tridiagonal  tridiagonal.cpp
queue/: CMakeCache.txt  CMakeLists.txt  Makefile  Stack  Stack.cpp  array  array.cpp  arrayC  arrayC.cpp  cmake_install.cmake  list  list.cpp
recursion/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  combination  combination.cpp  factorial  factorial.cpp  fibonacci  fibonacci.cpp  hanoi  hanoi.cpp  head_recursion  head_recursion.cpp  pow  pow.cpp  recursion1  recursion1.cpp  recursion2  recursion2.cpp  recursion4  recursion4.cpp  recursion_indirec  recursion_indirec.cpp  recursion_nested  recursion_nested.cpp  recursion_tree  recursion_tree.cpp  static_recursion  static_recursion.cpp  sum_natural  sum_natural.cpp  tail_recursion  tail_recursion.cpp  taylor_serie  taylor_serie.cpp  tylor_serie1  tylor_serie1.cpp
sparce_matrix/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  matrix  matrix.cpp  matrix_class  matrix_class.cpp  poly  poly.cpp
stack/: CMakeCache.txt  CMakeLists.txt  Makefile  StackArray  StackArray.cpp  StackList  StackList.cpp  cmake_install.cmake  stack.py
(+47 files in other folders)
