cmake_minimum_required(VERSION 3.1)
cmake_policy(SET CMP0012 NEW)
PROJECT(projet)

ADD_EXECUTABLE(first first.cpp)

ADD_EXECUTABLE(List List.cpp)

ADD_EXECUTABLE(Circular_List Circular_List.cpp)

ADD_EXECUTABLE(Double_List Double_List.cpp)

ADD_EXECUTABLE(SparceMatrix SparceMatrix.cpp)

ADD_EXECUTABLE(Polinomial Polinomial.cpp)