cmake_minimum_required(VERSION 3.1)
cmake_policy(SET CMP0012 NEW)
PROJECT(projet)

ADD_EXECUTABLE(recursion1 recursion1.cpp)
ADD_EXECUTABLE(static_recursion static_recursion.cpp)
ADD_EXECUTABLE(tail_recursion tail_recursion.cpp)
ADD_EXECUTABLE(head_recursion head_recursion.cpp)
ADD_EXECUTABLE(recursion_tree recursion_tree.cpp)
ADD_EXECUTABLE(recursion_indirec recursion_indirec.cpp)
ADD_EXECUTABLE(recursion_nested recursion_nested.cpp)
ADD_EXECUTABLE(sum_natural sum_natural.cpp)
ADD_EXECUTABLE(factorial factorial.cpp)
ADD_EXECUTABLE(pow pow.cpp)
ADD_EXECUTABLE(taylor_serie taylor_serie.cpp)
ADD_EXECUTABLE(tylor_serie1 tylor_serie1.cpp)
ADD_EXECUTABLE(fibonacci fibonacci.cpp)
ADD_EXECUTABLE(combination combination.cpp)
ADD_EXECUTABLE(hanoi hanoi.cpp)
ADD_EXECUTABLE(recursion2 recursion2.cpp)
ADD_EXECUTABLE(recursion4 recursion4.cpp)